@@ -78,6 +78,9 @@ int make_socket_conn(const char *host, int socktype,
 int make_unix_socket(const char *filename, int socktype);
 int connect_unix_socket(const char *filename, int socktype);
 
+ssize_t send_with_creds(int, void *, size_t);
+ssize_t recv_with_creds(int, void *, size_t, pid_t *, uid_t *);
+
 int wait_for_connect(int, int);
 void make_nonblocking(int s);
 void make_blocking(int s);
